--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             // IMPORTANT: Replace this with the URL to your hosted CSV file.
             // The CSV must be accessible publicly (e.g., hosted on GitHub, Amazon S3, etc.)
-            const csvUrl = "https://esricane.maps.arcgis.com/sharing/rest/content/items/0a49cc6b54174092b77227d84f04c7b8/data";
+            const csvUrl = "https://github.com/wicket85/marketing_viewer/blob/main/ky_list_final.csv";
 
             // 1. Define the Pop-up Template
             // This template tells the map view what fields to display when a point is clicked.
