--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         // Define the columns we are interested in for coordinates and display
         const LATITUDE_FIELD = 'lat';
         const LONGITUDE_FIELD = 'long';
-        const DISPLAY_FIELDS = ['INDEX','FACILITY_TYPE','NAME','ADDRESS','CITY','ST','ZIP','PHONE','ADMINISTRATOR','OWNER','LICENSE_NO','LICENSE_EXPIRATION','BEDS'];
+        const DISPLAY_FIELDS = ['FACILITY_TYPE','NAME','ADDRESS','CITY','ST','ZIP','PHONE','ADMINISTRATOR','BEDS'];
 
         // Simple function to parse the CSV string into an array of objects
         function parseCSV(csvText) {
