--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Leaflet CSV Data Map</title>
+    <title>Marketing Facility Map</title>
     
     <!-- Load Tailwind CSS for styling and responsiveness -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -54,11 +54,11 @@
 </head>
 <body>
 
-    <!-- Header Overlay -->
+    <!-- Header Overlay
     <div class="header-bar p-4 bg-white/90 shadow-md rounded-b-xl max-w-lg mx-auto mt-4 text-center">
         <h1 class="text-xl font-bold text-gray-800">Laura's Marketing Map</h1>
         <p class="text-sm text-gray-500">Your wife is awesome 😉</p>
-    </div>
+    </div> -->
 
     <!-- Map Container -->
     <div id="map">
